[hacktoberfest] - creating unit tests for BooleanParser class